@@ -1777,6 +1777,10 @@ array_creation_expression
 		$$ = new ArrayCreation ((string) $2, (ArrayList) $4, (string) $6, (ArrayList) $7, 
 					lexer.Location);
 	  }
+	| NEW type rank_specifiers array_initializer
+	  {
+		$$ = new ArrayCreation ((string) $2, (string) $3, (ArrayList) $4, lexer.Location);
+	  }
 	;
 
 opt_rank_specifier
